// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AggregationsResults hover types > probe_count_only 1`] = `
"// The result of objectSet.aggregate({ $select: { $count: "unordered" } }).
{ $count: number }"
`;

exports[`AggregationsResults hover types > probe_groupBy_fixedWidth 1`] = `
"// GroupBy a numeric property by $fixedWidth — group is the bucket's numeric value.
Array<
  & { $group: { employeeId: number } }
  & AggregationResultsWithoutGroups<EmployeeApiTest, { $count: "unordered" }>
>"
`;

exports[`AggregationsResults hover types > probe_groupBy_includeNullValue 1`] = `
"// GroupBy with $includeNullValue: true — the group key becomes nullable.
Array<
  & { $group: { class: string | null } }
  & AggregationResultsWithoutGroups<EmployeeApiTest, { $count: "unordered" }>
>"
`;

exports[`AggregationsResults hover types > probe_groupBy_ranges 1`] = `
"// GroupBy a numeric property by $ranges — group becomes a startValue/endValue pair.
Array<
  {
    $group: {
      employeeId: { startValue: 0 | 100 | 200; endValue: 0 | 100 | 200 };
    };
  } & AggregationResultsWithoutGroups<EmployeeApiTest, { $count: "unordered" }>
>"
`;

exports[`AggregationsResults hover types > probe_mixed_props 1`] = `
"// Aggregation across multiple properties, including $count.
{
  $count: number;
  fullName: { approximateDistinct: number };
  employeeId: { sum: number | undefined };
}"
`;

exports[`AggregationsResults hover types > probe_single_prop_multi_metrics 1`] = `
"// Aggregation across one property with multiple metrics.
{
  employeeId: {
    avg: number | undefined;
    min: number | undefined;
    max: number | undefined;
  };
}"
`;

exports[`AggregationsResults hover types > probe_with_groupBy 1`] = `
"// Aggregation grouped by a single property — result becomes an array of $group plus aggregations.
Array<
  & { $group: { class: string } }
  & AggregationResultsWithoutGroups<EmployeeApiTest, { $count: "unordered" }>
>"
`;

exports[`ObjectSet hover types > probe_aggregate_param 1`] = `
"// The req argument of objectSet.aggregate(...).
& AggregateOpts<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest
  >
  & {
    $select:
      & Pick<
        | UnorderedAggregationClause<
          {
            __DefinitionMetadata?:
              | { properties: {}; props?: {} | undefined }
              | undefined;
          } & EmployeeApiTest
        >
        | OrderedAggregationClause<
          {
            __DefinitionMetadata?:
              | { properties: {}; props?: {} | undefined }
              | undefined;
          } & EmployeeApiTest
        >,
        ValidAggregationKeys<
          {
            __DefinitionMetadata?:
              | { properties: {}; props?: {} | undefined }
              | undefined;
          } & EmployeeApiTest
        >
      >
      & Record<never, never>;
  }
  & {
    $groupBy:
      & Pick<
        GroupByClause<
          {
            __DefinitionMetadata?:
              | { properties: {}; props?: {} | undefined }
              | undefined;
          } & EmployeeApiTest
        > | undefined,
        never
      >
      & Record<never, never>;
  }"
`;

exports[`ObjectSet hover types > probe_asyncIter_result 1`] = `
"// The result of objectSet.asyncIter().
AsyncIterableIterator<
  | Osdk.Instance<EmployeeApiTest, never, PropertyKeys<EmployeeApiTest>, {}>
  | (
    & ObjectIdentifiers<EmployeeApiTest>
    & {
      readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
      readonly $objectType: string;
      readonly $title: string | undefined;
    }
    & Pick<EmployeeApiTest.Props, PropertyKeys<EmployeeApiTest>>
    & {}
    & {
      readonly $link: {
        readonly lead: SingleLinkAccessor<EmployeeApiTest>;
        readonly peeps: ObjectSet<EmployeeApiTest, never>;
      };
      readonly $as: <NEW_Q extends InterfaceDefinition>(
        type: string | NEW_Q,
      ) => Osdk.Instance<
        NEW_Q,
        never,
        ConvertProps<
          EmployeeApiTest,
          NEW_Q,
          PropertyKeys<EmployeeApiTest>,
          never
        >,
        {}
      >;
      readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
        updatedObject?:
          | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
          | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
          | undefined,
      ) => Osdk.Instance<
        EmployeeApiTest,
        never,
        PropertyKeys<EmployeeApiTest> | NEW_PROPS,
        {}
      >;
      readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
        ObjectMetadata: ObjectMetadata;
      };
      readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
        PropertyApiName extends PropertyKeys<EmployeeApiTest>,
      >(
        propertyApiName: PropertyApiName,
        options?: { locale?: string; timezoneId?: string },
      ) => string | undefined;
    }
    & { $score: number }
  )
>"
`;

exports[`ObjectSet hover types > probe_fetchPage_result 1`] = `
"// The awaited result of objectSet.fetchPage().
PageResult<
  | Osdk.Instance<EmployeeApiTest, never, PropertyKeys<EmployeeApiTest>, {}>
  | (
    & ObjectIdentifiers<EmployeeApiTest>
    & {
      readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
      readonly $objectType: string;
      readonly $title: string | undefined;
    }
    & Pick<EmployeeApiTest.Props, PropertyKeys<EmployeeApiTest>>
    & {}
    & {
      readonly $link: {
        readonly lead: SingleLinkAccessor<EmployeeApiTest>;
        readonly peeps: ObjectSet<EmployeeApiTest, never>;
      };
      readonly $as: <NEW_Q extends InterfaceDefinition>(
        type: string | NEW_Q,
      ) => Osdk.Instance<
        NEW_Q,
        never,
        ConvertProps<
          EmployeeApiTest,
          NEW_Q,
          PropertyKeys<EmployeeApiTest>,
          never
        >,
        {}
      >;
      readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
        updatedObject?:
          | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
          | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
          | undefined,
      ) => Osdk.Instance<
        EmployeeApiTest,
        never,
        PropertyKeys<EmployeeApiTest> | NEW_PROPS,
        {}
      >;
      readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
        ObjectMetadata: ObjectMetadata;
      };
      readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
        PropertyApiName extends PropertyKeys<EmployeeApiTest>,
      >(
        propertyApiName: PropertyApiName,
        options?: { locale?: string; timezoneId?: string },
      ) => string | undefined;
    }
    & { $score: number }
  )
>"
`;

exports[`ObjectSet hover types > probe_objectSet 1`] = `
"// A bare ObjectSet<EmployeeApiTest> value.
ObjectSet<EmployeeApiTest, never>"
`;

exports[`ObjectSet hover types > probe_objectSet_with_rdp 1`] = `
"// An ObjectSet with a derived property mom: integer.
ObjectSet<EmployeeApiTest, { mom: "integer" }>"
`;

exports[`ObjectSet hover types > probe_subscribe_listener_param 1`] = `
"// The listener argument of objectSet.subscribe(...).
ObjectSetSubscription.Listener<
  {
    __DefinitionMetadata?:
      | { properties: {}; props?: {} | undefined }
      | undefined;
  } & EmployeeApiTest,
  PropertyKeys<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest
  >,
  boolean
>"
`;

exports[`ObjectSet hover types > probe_where_clause_param 1`] = `
"// The clause argument of objectSet.where(...).
| OrWhereClause<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest,
    {}
  >
  | AndWhereClause<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest,
    {}
  >
  | NotWhereClause<
    {
      __DefinitionMetadata?:
        | { properties: {}; props?: {} | undefined }
        | undefined;
    } & EmployeeApiTest,
    {}
  >
  | {
    class?: StringFilter | undefined;
    fullName?: StringFilter | undefined;
    employeeId?: NumberFilter | undefined;
    attachment?: BaseFilter<string> | undefined;
    geopoint?: GeoFilter | undefined;
    timeseries?: BaseFilter<string> | undefined;
    mediaReference?: BaseFilter<string> | undefined;
    geotimeSeriesReference?: BaseFilter<string> | undefined;
    isActive?: BooleanFilter | undefined;
    yearsOfExperience?: NumberFilter | undefined;
    rank?: BaseFilter<string> | undefined;
    performanceScore?: NumberFilter | undefined;
    hourlyRate?: NumberFilter | undefined;
    dateOfJoining?: DatetimeFilter | undefined;
    lastUpdated?: DatetimeFilter | undefined;
    skillSet?: StringFilter | undefined;
    skillSetEmbedding?: BaseFilter<string> | undefined;
  }"
`;

exports[`ObjectSet hover types > probe_where_clause_with_rdp 1`] = `
"// The clause argument of .where(...) on an ObjectSet with a derived mom.
| OrWhereClause<
    {
      __DefinitionMetadata?: {
        properties: { mom: SimplePropertyDef.ToPropertyDef<"integer"> };
        props?: { mom: number } | undefined;
      } | undefined;
    } & EmployeeApiTest,
    {}
  >
  | AndWhereClause<
    {
      __DefinitionMetadata?: {
        properties: { mom: SimplePropertyDef.ToPropertyDef<"integer"> };
        props?: { mom: number } | undefined;
      } | undefined;
    } & EmployeeApiTest,
    {}
  >
  | NotWhereClause<
    {
      __DefinitionMetadata?: {
        properties: { mom: SimplePropertyDef.ToPropertyDef<"integer"> };
        props?: { mom: number } | undefined;
      } | undefined;
    } & EmployeeApiTest,
    {}
  >
  | {
    mom?: NumberFilter | undefined;
    class?: StringFilter | undefined;
    fullName?: StringFilter | undefined;
    employeeId?: NumberFilter | undefined;
    attachment?: BaseFilter<string> | undefined;
    geopoint?: GeoFilter | undefined;
    timeseries?: BaseFilter<string> | undefined;
    mediaReference?: BaseFilter<string> | undefined;
    geotimeSeriesReference?: BaseFilter<string> | undefined;
    isActive?: BooleanFilter | undefined;
    yearsOfExperience?: NumberFilter | undefined;
    rank?: BaseFilter<string> | undefined;
    performanceScore?: NumberFilter | undefined;
    hourlyRate?: NumberFilter | undefined;
    dateOfJoining?: DatetimeFilter | undefined;
    lastUpdated?: DatetimeFilter | undefined;
    skillSet?: StringFilter | undefined;
    skillSetEmbedding?: BaseFilter<string> | undefined;
  }"
`;

exports[`ObjectSet hover types > probe_withProperties_return 1`] = `
"// The result of objectSet.withProperties({ mom: ..., dad: ... }).
ObjectSet<
  EmployeeApiTest,
  { mom: "integer"; dad: "string" | undefined }
>"
`;

exports[`Osdk.Instance hover types > probe_all_base_props 1`] = `
"// An instance fetched with $includeAllBaseObjectProperties: true.
& ObjectIdentifiers<EmployeeApiTest>
  & {
    readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
    readonly $objectType: string;
    readonly $title: string | undefined;
  }
  & Pick<EmployeeApiTest.Props, PropertyKeys<EmployeeApiTest>>
  & {}
  & {
    readonly $link: {
      readonly lead: SingleLinkAccessor<EmployeeApiTest>;
      readonly peeps: ObjectSet<EmployeeApiTest, never>;
    };
    readonly $as: <NEW_Q extends InterfaceDefinition>(
      type: string | NEW_Q,
    ) => Osdk.Instance<
      NEW_Q,
      "$allBaseProperties",
      ConvertProps<
        EmployeeApiTest,
        NEW_Q,
        PropertyKeys<EmployeeApiTest>,
        "$allBaseProperties"
      >,
      {}
    >;
    readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
      updatedObject?:
        | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
        | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
        | undefined,
    ) => Osdk.Instance<
      EmployeeApiTest,
      "$allBaseProperties",
      PropertyKeys<EmployeeApiTest> | NEW_PROPS,
      {}
    >;
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
      ObjectMetadata: ObjectMetadata;
    };
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
      PropertyApiName extends PropertyKeys<EmployeeApiTest>,
    >(
      propertyApiName: PropertyApiName,
      options?: { locale?: string; timezoneId?: string },
    ) => string | undefined;
  }"
`;

exports[`Osdk.Instance hover types > probe_default 1`] = `
"// A bare Osdk.Instance — what users get when iterating fetchPage results without options.
& ObjectIdentifiers<EmployeeApiTest>
  & {
    readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
    readonly $objectType: string;
    readonly $title: string | undefined;
  }
  & Pick<EmployeeApiTest.Props, PropertyKeys<EmployeeApiTest>>
  & {}
  & {
    readonly $link: {
      readonly lead: SingleLinkAccessor<EmployeeApiTest>;
      readonly peeps: ObjectSet<EmployeeApiTest, never>;
    };
    readonly $as: <NEW_Q extends InterfaceDefinition>(
      type: string | NEW_Q,
    ) => Osdk.Instance<
      NEW_Q,
      never,
      ConvertProps<
        EmployeeApiTest,
        NEW_Q,
        PropertyKeys<EmployeeApiTest>,
        never
      >,
      {}
    >;
    readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
      updatedObject?:
        | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
        | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
        | undefined,
    ) => Osdk.Instance<
      EmployeeApiTest,
      never,
      PropertyKeys<EmployeeApiTest> | NEW_PROPS,
      {}
    >;
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
      ObjectMetadata: ObjectMetadata;
    };
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
      PropertyApiName extends PropertyKeys<EmployeeApiTest>,
    >(
      propertyApiName: PropertyApiName,
      options?: { locale?: string; timezoneId?: string },
    ) => string | undefined;
  }"
`;

exports[`Osdk.Instance hover types > probe_interface_default 1`] = `
"// An instance whose Q is an interface rather than an object type.
& ObjectIdentifiers<FooInterfaceApiTest>
  & {
    readonly $objectSpecifier: ObjectSpecifier<FooInterfaceApiTest>;
    readonly $objectType: string;
    readonly $title: string | undefined;
  }
  & Pick<FooInterfaceApiTest.Props, PropertyKeys<FooInterfaceApiTest>>
  & {}
  & {
    readonly $link: never;
    readonly $as: <NEW_Q extends ObjectOrInterfaceDefinition>(
      type: string | NEW_Q,
    ) => Osdk.Instance<
      NEW_Q,
      never,
      ConvertProps<
        FooInterfaceApiTest,
        NEW_Q,
        PropertyKeys<FooInterfaceApiTest>,
        never
      >,
      {}
    >;
    readonly $clone: <NEW_PROPS extends PropertyKeys<FooInterfaceApiTest>>(
      updatedObject?:
        | Osdk.Instance<FooInterfaceApiTest, any, NEW_PROPS, {}>
        | { [K in NEW_PROPS]?: FooInterfaceApiTest.Props[K] | undefined }
        | undefined,
    ) => Osdk.Instance<
      FooInterfaceApiTest,
      never,
      PropertyKeys<FooInterfaceApiTest> | NEW_PROPS,
      {}
    >;
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
      ObjectMetadata: ObjectMetadata;
      InterfaceMetadata: InterfaceMetadata;
    };
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
      PropertyApiName extends PropertyKeys<FooInterfaceApiTest>,
    >(
      propertyApiName: PropertyApiName,
      options?: { locale?: string; timezoneId?: string },
    ) => string | undefined;
  }"
`;

exports[`Osdk.Instance hover types > probe_property_securities 1`] = `
"// An instance fetched with $includePropertySecurities: true.
& ObjectIdentifiers<EmployeeApiTest>
  & {
    readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
    readonly $objectType: string;
    readonly $title: string | undefined;
  }
  & Pick<EmployeeApiTest.Props, PropertyKeys<EmployeeApiTest>>
  & {}
  & {
    readonly $link: {
      readonly lead: SingleLinkAccessor<EmployeeApiTest>;
      readonly peeps: ObjectSet<EmployeeApiTest, never>;
    };
    readonly $as: <NEW_Q extends InterfaceDefinition>(
      type: string | NEW_Q,
    ) => Osdk.Instance<
      NEW_Q,
      "$propertySecurities",
      ConvertProps<
        EmployeeApiTest,
        NEW_Q,
        PropertyKeys<EmployeeApiTest>,
        "$propertySecurities"
      >,
      {}
    >;
    readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
      updatedObject?:
        | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
        | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
        | undefined,
    ) => Osdk.Instance<
      EmployeeApiTest,
      "$propertySecurities",
      PropertyKeys<EmployeeApiTest> | NEW_PROPS,
      {}
    >;
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
      ObjectMetadata: ObjectMetadata;
    };
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
      PropertyApiName extends PropertyKeys<EmployeeApiTest>,
    >(
      propertyApiName: PropertyApiName,
      options?: { locale?: string; timezoneId?: string },
    ) => string | undefined;
  }
  & {
    readonly $propertySecurities: {
      mediaReference: Array<PropertySecurity>;
      attachment: Array<PropertySecurity>;
      geopoint: Array<PropertySecurity>;
      geotimeSeriesReference: Array<PropertySecurity>;
      class: Array<PropertySecurity>;
      fullName: Array<PropertySecurity>;
      employeeId: Array<PropertySecurity>;
      timeseries: Array<PropertySecurity>;
      isActive: Array<PropertySecurity>;
      yearsOfExperience: Array<PropertySecurity>;
      rank: Array<PropertySecurity>;
      performanceScore: Array<PropertySecurity>;
      hourlyRate: Array<PropertySecurity>;
      dateOfJoining: Array<PropertySecurity>;
      lastUpdated: Array<PropertySecurity>;
      skillSet: Array<PropertySecurity>;
      skillSetEmbedding: Array<PropertySecurity>;
    };
  }"
`;

exports[`Osdk.Instance hover types > probe_select_subset 1`] = `
"// An instance with $select narrowing the property set to a subset.
& ObjectIdentifiers<EmployeeApiTest>
  & {
    readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
    readonly $objectType: string;
    readonly $title: string | undefined;
  }
  & Pick<EmployeeApiTest.Props, "fullName" | "employeeId">
  & {}
  & {
    readonly $link: {
      readonly lead: SingleLinkAccessor<EmployeeApiTest>;
      readonly peeps: ObjectSet<EmployeeApiTest, never>;
    };
    readonly $as: <NEW_Q extends InterfaceDefinition>(
      type: string | NEW_Q,
    ) => Osdk.Instance<
      NEW_Q,
      never,
      ConvertProps<EmployeeApiTest, NEW_Q, "fullName" | "employeeId", never>,
      {}
    >;
    readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
      updatedObject?:
        | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
        | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
        | undefined,
    ) => Osdk.Instance<
      EmployeeApiTest,
      never,
      "fullName" | "employeeId" | NEW_PROPS,
      {}
    >;
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
      ObjectMetadata: ObjectMetadata;
    };
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
      PropertyApiName extends PropertyKeys<EmployeeApiTest>,
    >(
      propertyApiName: PropertyApiName,
      options?: { locale?: string; timezoneId?: string },
    ) => string | undefined;
  }"
`;

exports[`Osdk.Instance hover types > probe_with_rdps 1`] = `
"// An instance with derived properties added via withProperties.
& ObjectIdentifiers<EmployeeApiTest>
  & {
    readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
    readonly $objectType: string;
    readonly $title: string | undefined;
  }
  & Pick<EmployeeApiTest.Props, "employeeId">
  & { mom: number; dad: string | undefined }
  & {
    readonly $link: {
      readonly lead: SingleLinkAccessor<EmployeeApiTest>;
      readonly peeps: ObjectSet<EmployeeApiTest, never>;
    };
    readonly $as: <NEW_Q extends InterfaceDefinition>(
      type: string | NEW_Q,
    ) => Osdk.Instance<
      NEW_Q,
      never,
      ConvertProps<EmployeeApiTest, NEW_Q, "employeeId", never>,
      {}
    >;
    readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
      updatedObject?:
        | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
        | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
        | undefined,
    ) => Osdk.Instance<EmployeeApiTest, never, "employeeId" | NEW_PROPS, {}>;
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
      ObjectMetadata: ObjectMetadata;
    };
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
      PropertyApiName extends PropertyKeys<EmployeeApiTest>,
    >(
      propertyApiName: PropertyApiName,
      options?: { locale?: string; timezoneId?: string },
    ) => string | undefined;
  }"
`;

exports[`Osdk.Instance hover types > probe_with_rid 1`] = `
"// An instance fetched with $includeRid: true — exposes $rid.
& ObjectIdentifiers<EmployeeApiTest>
  & {
    readonly $objectSpecifier: ObjectSpecifier<EmployeeApiTest>;
    readonly $objectType: string;
    readonly $title: string | undefined;
  }
  & Pick<EmployeeApiTest.Props, PropertyKeys<EmployeeApiTest>>
  & {}
  & {
    readonly $link: {
      readonly lead: SingleLinkAccessor<EmployeeApiTest>;
      readonly peeps: ObjectSet<EmployeeApiTest, never>;
    };
    readonly $as: <NEW_Q extends InterfaceDefinition>(
      type: string | NEW_Q,
    ) => Osdk.Instance<
      NEW_Q,
      "$rid",
      ConvertProps<
        EmployeeApiTest,
        NEW_Q,
        PropertyKeys<EmployeeApiTest>,
        "$rid"
      >,
      {}
    >;
    readonly $clone: <NEW_PROPS extends PropertyKeys<EmployeeApiTest>>(
      updatedObject?:
        | Osdk.Instance<EmployeeApiTest, any, NEW_PROPS, {}>
        | { [K in NEW_PROPS]?: EmployeeApiTest.Props[K] | undefined }
        | undefined,
    ) => Osdk.Instance<
      EmployeeApiTest,
      "$rid",
      PropertyKeys<EmployeeApiTest> | NEW_PROPS,
      {}
    >;
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__metadata: {
      ObjectMetadata: ObjectMetadata;
    };
    readonly $__EXPERIMENTAL__NOT_SUPPORTED_YET__getFormattedValue: <
      PropertyApiName extends PropertyKeys<EmployeeApiTest>,
    >(
      propertyApiName: PropertyApiName,
      options?: { locale?: string; timezoneId?: string },
    ) => string | undefined;
  }
  & { readonly $rid: string }"
`;
